Reduce images size to better fit the other content, Add traduction for footer and redesign it

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,32 +11,32 @@
     "Testimonies": "Testimonies",
     "À Propos de SIGL" : "About SIGL",
     "AboutText" :
-    "Companies have to develop Information Systems and complex software which primary qualities are their abilities to evolve, their reliability as well as their performance. Companies needs are evolving ever faster with the apparition of new market actors and disruptive business models backed up by the promise of new technologies, even more connected and cheaper than ever. There is a need to go faster in order to transform the existing systems and create the new business services for today and tommorrow : Online Presence, Interconnection with all Informaiton Systems, new real-time services, better knowing of clients.",
+    "Companies have to develop Information Systems and complex software which best features are their ability to evolve, their reliability as well as their performance. Companies requirements are evolving even faster with the apparition of new market actors and disruptive business models backed up by the promise of new technologies, even more connected and cheaper than ever. There is a need for faster technologies in order to transform existing systems and create the new business services for both today and tommorrow : Online Presence, Interconnection with all Information Systems, new real-time services, better understanding of client needs.",
     "Matières" : "Course List",
     "ModulesIntro" : 
     "In order to better prepare our students for the business community, SIGL specialty is focused on 4 majors topics, every one of which bringing a part of the skills and culture required in order to build tommorrow's technologies",
     "M&A" : "Mobility and Applications",
-    "M&AText" : "Discover and grasp the new software challenges in order to integrate itself in growing mobility requirements",
+    "M&AText" : "Discover and grasp the new software challenges in order to integrate it in growing mobility requirements",
     "C&A" : "Cloud and Architecture",
-    "C&AText" : "Understanding the building and functionning process of Information Systems as well as its technical architeture. Discovering Cloud technologies and Big Data",
+    "C&AText" : "Understanding the building and functionning process of Information Systems as well as its technical architecture. Discovering Cloud technologies and Big Data",
     "L&M" : "Leadership and Management",
-    "L&MText" : "Handling the new business models in order to answer the IT governance's new requirements and train tommorrow's managers",
+    "L&MText" : "Handling the new business models in order to answer the IT governance's new challenges and train tommorrow's managers",
     "D&T" : "Digitalization and Transformation",
-    "D&TText" : "Undestanding and make Digital Transformation viable for companies as well as the new innovation levers provided by the IT",
+    "D&TText" : "Undestanding and make Digital Transformation viable for companies as well as discovering the new innovation levers provided by the growing sector of IT business ",
     "Proj" : "Our projects",
     "ARCL" : "Cloud Architecture",
     "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as PaaS Services such as AWS or Microsoft Azure",
     "VIRT" : "Virtualization",
     "VIRTText" : "Business case realization based on cost lines and savings levers",
-    "IOTText" : "Creation of an IoT Object and realize Marketing processes (Business Case, Commercial) as well as the realization",
-    "PAEText" : "Group Project in partnership with several companies : Profesionnal Relationships, Société Générale, Korn Ferry...",
+    "IOTText" : "Creation of an IoT Object and build marketing & business processes (Business Case, Advertising) as well as the realization",
+    "PAEText" : "Group Project in partnership with several companies : Profesionnal Relationships of EPITA, Société Générale, Korn Ferry...",
     "URSI" : "IS Urbanization",
-    "URSIText" : "Creation of an Information System simulating a Retail company's behavior",
+    "URSIText" : "Creation of a reduced Information System simulating a Retail company's behavior",
     "WTText" : "Two-sided project realized with modern web technologies (Free Choice) : ROR, Javascript, Golang...",
     "PMS" : "Multi-specialty Project",
-    "PMSText" : "SIGL, Security and Network students work together in order to propose a transformation solution in a business context",
+    "PMSText" : "SIGL, Security and Network students work together in order to propose a transformation solution in a business context (Ex : Hospitals)",
     "MEPA" : "Agile Methodology",
-    "MEPAText" : "Scrum-Compliant Project realized in group of 4",
+    "MEPAText" : "Scrum-Compliant Project realized in group. Apply SCRUM's best practices in a free choice project",
     "ARCHText" : "Class Project in order to understand all possible aspects of IS Arcitecture",
 
 
@@ -170,5 +170,20 @@
     "AMOA" : "Assistance to Mastery of Work",
     "BizDev" : "Business Developper",
     "Facebook" : "Join Us On Facebook",
-    "Contact" : "Contact Us"
+    "Contact" : "Contact Us",
+
+
+    "MTI" :  "MIT (Multimedia and Information Technology)",
+    "CSI" : "SCI research (Scientific computing and image)",
+    "SRS" : "SNS (Systems, Networks and Security)",
+    "GISTRE" : "CERES (Computing Engineering for Real-time and Embedded Systems)",
+    "TCOM" : "TCOM (Telecommunications)",
+    "SIGLM" : " ISSE (Information Systems and Software Engineering) ",
+    "GITM" : " GITM (Global IT Management) ",
+    "SCIA" : "CSAC (Cognitive Science and Advanced Computing)",
+    "3IE" : "3IE (IT Innovation Institute)", 
+    "LRDE" : " LRDE (Research and Development Laboratory)",
+    "LSE" : " LSE (System Laboratory) ",
+
+    "OtherAsso" : "Other student associations"
   }
