fix french text

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,7 @@
     "Projects": "Projets",
     "Disciplines": "Liste des matières",
     "Careers": "Débouchés",
-    "Social": "Contact & Réseau",
+    "Social": "Contact and Réseau",
     "Testimonies": "Témoignages",
     "About SIGL" : "À Propos de SIGL",
     "AboutText":
@@ -15,19 +15,19 @@
     "Matières"  : "Liste des matières",
     "ModulesIntro" : 
     "Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun une partie de la culture et des connaissances requises pour construire les technologies de demain.",
-    "M&A" : "Mobilité et Applications",
+    "MetA" : "Mobilité et Applications",
     "M&AText" : "Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité toujours plus grandes.",
     "C&A" : "Cloud et Architecture",
     "C&AText" : "Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique. Découverte des technologies Cloud et du Big Data.",
     "L&M" : "Leadership et Management",
     "L&MText" : "Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT et de former les managers de demain.",
     "D&T" : "Digitalisation et Transformation",
-    "D&TText" : "Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.",
+    "D&TText" : "Comprendre et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.",
     "Proj" : "Nos Projets",
     "ARCL" : "Architecture Cloud",
-    "ARCLText" : "Créer un cloud hybride avec AWS/Azure et la suite logicielle opensource Openstack managé par une Cloud Management Platform",
+    "ARCLText" : "Mise en place d'un Cloud Hybride basé sur OpenStack permettant de mettre en pratique les concepts du Cloud : Design-For-Failure & Self-Service",
     "VIRT" : "Virtualisation",
-    "VIRTText" : "Réalisation de Business cases projets se basant sur des lignes de coûts et des leviers d’économies.",
+    "VIRTText" : "Réaliser un Business case se basant sur des lignes de coûts et des leviers d’économies.",
     "IOTText" : "Proposer un produit IoT puis réaliser l'ensemble de la démarche business (Business Case, Publicité) jusqu'à la réalistion d'un Proof Of Concept.",
     "PAEText" : "Projet avec entreprise tout le long de l'année; SIGL, RE, Société Général, KornFerry, GN... ",
     "URSI" : "Urbanisation des SI",
@@ -45,7 +45,7 @@
     "LM_OPDI" : "OPDI : Organisation et pilotage d’une DSI",
     "LM_COIN" : "COIN : Communication Interpersonnelle",
     "LM_URSI" : "URSI : Urbanisation des SI",
-    "LM_VIT1" : "VIT1 : Virtualisation & Transformation IT",
+    "LM_VIT1" : "VIT1 : Virtualisation et Transformation IT",
     "LM_ARCL" : "ARCL : Architecture Cloud",
     "LM_SOAR" : "SOAR : Solution Architecture ( + TD infrastructures & Projet PMS)",
     "LM_ARLA" : "ARLA : Architecture Logicielle",
@@ -57,7 +57,7 @@
     "LM_INNO" : "INNO : Innovation",
     "LM_PMDE" : "PMDE : Projet mode d’emploi",
     "LM_DIGI" : "DIGI : Digitalisation",
-    "LM_VIT2" : "VIT2 : Virtualisation & Transformation IT",
+    "LM_VIT2" : "VIT2 : Virtualisation et Transformation IT",
     "LM_METH" : "METH : Méthodes",
     "LM_PERS" : "PERS : Perspectives IT",
     "OBJ" : "Objectifs:",
