add token to github preprod url

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,7 +37,7 @@
     "PMSText" : "SIGL, Security and Network students work together in order to propose a transformation solution in a business context (Ex : Hospitals)",
     "MEPA" : "Agile Methodology",
     "MEPAText" : "Scrum-Compliant Project realized in group. Apply SCRUM's best practices in a free choice project",
-    "ARCHText" : "Class Project in order to understand all possible aspects of IS Arcitecture",
+    "ARCHText" : "Class Project in order to understand all possible aspects of IS Architecture",
 
 
     "LM_OPCO" : "OPCO : Personnal Organization and Communication",
