--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -37,6 +37,7 @@
     "PMSText" : "Etudiants SIGL, Sécurité et Réseau se regroupent afin de proposer une solution de transformation dans un cadre concret",
     "MEPA" : "Méthodologie Agile",
     "MEPAText" : "Projet libre respectant les principes et les bonne pratiques de l'Agile et de la méthode SCRUM.",
+    "ARCH" : "Architecture",
     "ARCHText" : "Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI ",
 
     
