Last orthographic review

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
     "Modules": "Modules",
     "Projects": "Projects",
     "Disciplines": "Disciplines",
-    "Careers": "Career Oportunities",
+    "Careers": "Career Opportunities",
     "Social": "Contact & Network",
     "Testimonies": "Testimonies",
     "À Propos de SIGL" : "About SIGL",
@@ -14,22 +14,22 @@
     "Companies have to develop Information Systems and complex software which best features are their ability to evolve, their reliability as well as their performance. Companies requirements are evolving even faster with the apparition of new market actors and disruptive business models backed up by the promise of new technologies, even more connected and cheaper than ever. There is a need for faster technologies in order to transform existing systems and create the new business services for both today and tomorrow : Online Presence, Interconnection with all Information Systems, new real-time services, better understanding of client needs.",
     "Matières" : "Course List",
     "ModulesIntro" : 
-    "In order to better prepare our students for the business community, SIGL specialty is focused on 4 majors topics, every one of which bringing a part of the skills and culture required in order to build tommorrow's technologies",
+    "In order to better prepare our students for the business community, SIGL specialty is focused on 4 major topics, every one of which bringing a part of the skills and culture required in order to build tomorrow's technologies",
     "M&A" : "Mobility and Applications",
     "M&AText" : "Discover and grasp the new software challenges in order to integrate it in growing mobility requirements",
     "C&A" : "Cloud and Architecture",
-    "C&AText" : "Understanding the building and functionning process of Information Systems as well as its technical architecture. Discovering Cloud technologies and Big Data",
+    "C&AText" : "Understanding the building and functioning process of Information Systems as well as its technical architecture. Discovering Cloud technologies and Big Data",
     "L&M" : "Leadership and Management",
-    "L&MText" : "Handling the new business models in order to answer the IT governance's new challenges and train tommorrow's managers",
+    "L&MText" : "Handling the new business models in order to answer the IT governance's new challenges and train tomorrow's managers",
     "D&T" : "Digitalization and Transformation",
-    "D&TText" : "Undestanding and make Digital Transformation viable for companies as well as discovering the new innovation levers provided by the growing sector of IT business ",
+    "D&TText" : "Understanding and make Digital Transformation viable for companies as well as discovering the new innovation levers provided by the growing sector of IT business ",
     "Proj" : "Our projects",
     "ARCL" : "Cloud Architecture",
     "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as PaaS Services such as AWS or Microsoft Azure",
     "VIRT" : "Virtualization",
-    "VIRTText" : "Business case realization based on cost lines and savings levers",
+    "VIRTText" : "Business case realization based on cost lines and saving levers",
     "IOTText" : "Creation of an IoT Object and build marketing & business processes (Business Case, Advertising) as well as the realization",
-    "PAEText" : "Group Project in partnership with several companies : Profesionnal Relationships of EPITA, Société Générale",
+    "PAEText" : "Group Project in partnership with several companies : Professional Relationships of EPITA, Société Générale",
     "URSI" : "IS Urbanization",
     "URSIText" : "Creation of a reduced Information System simulating a Retail company's behavior",
     "WTText" : "Two-sided project realized with modern web technologies (Free Choice) : ROR, Javascript, Golang...",
@@ -41,8 +41,8 @@
     "ARCHText" : "Class Project in order to understand all possible aspects of IS Architecture",
 
 
-    "LM_OPCO" : "OPCO : Personnal Organization and Communication",
-    "LM_AMOA" : "AMOA : Information System Project Maangement",
+    "LM_OPCO" : "OPCO : Personal Organization and Communication",
+    "LM_AMOA" : "AMOA : Information System Project Management",
     "LM_OPDI" : "OPDI : Information Systems Steering and Organization",
     "LM_COIN" : "COIN : Interpersonnal communication",
     "LM_URSI" : "URSI : Information Systems Urbanization",
@@ -52,7 +52,7 @@
     "LM_ARLA" : "ARLA : Software Architecture",
     "LM_MEPA" : "MEPA : Agile Methods Practice",
     "LM_ACOO" : "ACOO : Object-Oriented Analysis and Design",
-    "LM_NLPF" : "NLPF : New Functionnal Programming Languages",
+    "LM_NLPF" : "NLPF : New Programming Languages & Frameworks",
     "LM_DEVO" : "DEVO : DevOps",
     "LM_ACCC" : "ACCC : Management of Change",
     "LM_INNO" : "INNO : Innovation",
@@ -64,24 +64,24 @@
     "OBJ" : "Objectives:",
     
     
-        "LM_OPCO_text1" : "Being able to manage time, and efficiently apply a personnal organization",
-        "LM_OPCO_text2" : "Being able to reinforce professionnal efficiency using a better communication",
-        "LM_OPCO_text3" : "Being able to manage its own professionnal project",
+        "LM_OPCO_text1" : "Being able to manage time, and efficiently apply a personal organization",
+        "LM_OPCO_text2" : "Being able to reinforce professional efficiency using a better communication",
+        "LM_OPCO_text3" : "Being able to manage its own professional project",
        
         "LM_AMOA_text1" : "Apprehend and understand Information System from a company's Point of view",
-        "LM_AMOA_text2" : "Identify roles, missions and positionning of Project Management",
+        "LM_AMOA_text2" : "Identify roles, missions and positioning of Project Management",
         "LM_AMOA_text3" : "Define responsibilities between Project Management's business units",
         "LM_AMOA_text4" : "Being Able to conduct an organizational study for IT products / services",
        
         "LM_OPDI_text1" : "Understand digital impact on Information Systems",
         "LM_OPDI_text2" : "Improve IT System Department's performance",
-        "LM_OPDI_text3" : "Build a trget infrastructure",
+        "LM_OPDI_text3" : "Build a target infrastructure",
         "LM_OPDI_text4" : "Evaluate IT Projects' Return on Investment",
         "LM_OPDI_text5" : "Understand IT System Department Cost Reduction Levers",
        
         "LM_COIN_text1" : "Learn to know yourself",
-        "LM_COIN_text2" : "Develop you know-how-to-be",
-        "LM_COIN_text3" : "Understand the keys concepts of communication and teamwork",
+        "LM_COIN_text2" : "Develop your know-how-to-be",
+        "LM_COIN_text3" : "Understand the key concepts of communication and teamwork",
        
         "LM_URSI_text1" : "Discover Information Systems reality in a company",
         "LM_URSI_text2" : "Understand Middleware base that supports it",
@@ -126,19 +126,19 @@
         "LM_PMDE_text2" : "Identify concrete solutions",
         "LM_PMDE_text3" : "Deliver counsel mission",
     
-        "LM_DIGI_text1" : "Through a case study of Art Market's digitalization, acquire key notions of how innovation and tranformation are keys for business purposes",
-        "LM_DIGI_text2" : "Approach the matter on several angles, based on comparisons with reail and media industry",
+        "LM_DIGI_text1" : "Through a case study of Art Market's digitalization, acquire key notions of how innovation and transformation are keys for business purposes",
+        "LM_DIGI_text2" : "Approach the matter on several angles, based on comparisons with the media industry",
         "LM_DIGI_text3" : "Learn the main differences between innovation and transformation",
         
-        "LM_VIT2_text1" : "Discuss financial and technological models based around cloud computing",
-        "LM_VIT2_text2" : "Apprehend unsollicited actions with a client and elaborate a Business Case",
+        "LM_VIT2_text1" : "Discuss financial and technological models based on cloud computing",
+        "LM_VIT2_text2" : "Apprehend unsolicited actions with a client and elaborate a Business Case",
         "LM_VIT2_text3" : "Understand key notions of cloud transformation",
     
         "LM_METH_text1" : "Learn and practice several development and project management methods",
         "LM_METH_text2" : "Discover conceptual models and their applications in a business context",
         "LM_METH_text3" : "Take part in simulations",
     
-        "LM_PERS_text1" : "Undestand and control the evolutions of the IT market.",
+        "LM_PERS_text1" : "Undestand and control the evolution of the IT market.",
         "LM_PERS_text2" : "Solve an enterprise problem by designing and creating an IoT solution", 
         "LM_PERS_text3" : "Develop synthesis, analysis and innovation skills",
 
