fix contact and reseau & Mobilités and application

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,7 @@
     "Projects": "Projets",
     "Disciplines": "Liste des matières",
     "Careers": "Débouchés",
-    "Social": "Contact and Réseau",
+    "Social": "Contact et Réseau",
     "Testimonies": "Témoignages",
     "About SIGL" : "À Propos de SIGL",
     "AboutText":
@@ -15,7 +15,7 @@
     "Matières"  : "Liste des matières",
     "ModulesIntro" : 
     "Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun une partie de la culture et des connaissances requises pour construire les technologies de demain.",
-    "MetA" : "Mobilité et Applications",
+    "M&A" : "Mobilité et Applications",
     "M&AText" : "Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité toujours plus grandes.",
     "C&A" : "Cloud et Architecture",
     "C&AText" : "Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique. Découverte des technologies Cloud et du Big Data.",
