--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -185,7 +185,11 @@
     "LRDE" : "Laboratoire de Recherche et Développement de l'EPITA (LRDE)",
     "LSE" : " Laboratoire Système d'EPITA (LSE) ",
 
-    "OtherAsso" : "Toutes les autres associations"
+    "OtherAsso" : "Toutes les autres associations",
+
+
+    "Maj" : "Les Majeures",
+    "Labs" : "Laboratoires"
 
 
    
