add strategy consultant in opportunities

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -167,6 +167,7 @@
     "Dir" : "Managaing Director (CTO, CIO)",
     "DirProd" : "Production Director",
     "ConsOrga" : "Organizational Consultant",
+    "ConsStrat" : "IT Strategy Consultant",
 
     "Plur" : "Multidisciplinary",
     "Archi" : "Software Engineer",
