--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -166,6 +166,7 @@
     "Dir" : "Directeur Informatique (DI, DSI, CIO)",
     "DirProd" : "Directeur de production",
     "ConsOrga" : "Consultant Organisationnel",
+    "ConsStrat" : "Consultant Stratégie IT",
 
     "Plur" : "Pluriel",
     "Archi" : "Architecte Logiciel",
