Show only one VIRT in lectures

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -46,7 +46,7 @@
     "LM_OPDI" : "OPDI : Organisation et pilotage d’une DSI",
     "LM_COIN" : "COIN : Communication Interpersonnelle",
     "LM_URSI" : "URSI : Urbanisation des SI",
-    "LM_VIT1" : "VIT1 : Virtualisation et Transformation IT",
+    "LM_VIT1" : "VIRT : Virtualisation et Transformation IT",
     "LM_ARCL" : "ARCL : Architecture Cloud",
     "LM_SOAR" : "SOAR : Solution Architecture ( + TD infrastructure & Projet PMS)",
     "LM_ARLA" : "ARLA : Architecture Logicielle",
